13 - Sign In functionalities implemented

--- a/src/components/button/button.styles.scss
+++ b/src/components/button/button.styles.scss
@@ -10,7 +10,7 @@
   color: white;
   text-transform: uppercase;
   font-family: "Open Sans";
-  font-weight: bold;
+  font-weight: medium;
   border: none;
   cursor: pointer;
   display: flex;
